--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -471,9 +471,6 @@ td {
     padding:0;
     border-color: var(--color-interactive-orange);  
 }
-#hamburguerContentNavMedium .headerIcon ,#hamburguerContentNavSmall .headerIcon {
-    color: var(--color-interactive-orange); 
-}
 #hamburguerContentNavMedium .navbarButton,#hamburguerContentNavSmall .navbarButton{
     border-color: var(--color-interactive-orange);
     color: var(--color-interactive-orange);
@@ -481,8 +478,6 @@ td {
     width: 6rem;
 }
 #hamburguerContentNavMedium .navbarButtonSmall,#hamburguerContentNavSmall .navbarButtonSmall{
-    border-color: var(--color-interactive-orange);
-    color: var(--color-interactive-orange);
     height:2rem;
     width: 6rem;
     font-size: 0.8em;
@@ -493,7 +488,8 @@ td {
 #shoppingCartIconHamburguer{
     font-size: 1em;
 }
-#headerFixed .navbarButton{
-    border-color: var(--color-interactive-orange);
-    color: var(--color-interactive-orange);
+#sellNowButtonNavbar.navbarButton,#sellNowButtonNavbar.navbarButtonSmall{
+    background-color: var(--color-interactive-orange);
+    color: white;
+    border: none;
 }
