--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -298,7 +298,6 @@ header.navbar {
     background-color: var(--color-interactive-orange);
     color: white;
 }
-
 .btn.btn-orange:hover {
     background-color: var(--color-interactive-orange2);
     color: white;
@@ -309,7 +308,6 @@ header.navbar {
     border: solid 1px var(--color-background-dark-blue);
     color: var(--color-background-dark-blue);
 }
-
 .btn.btn-blue:hover {
     background-color: var(--color-background-dark-blue);
     color: white;
@@ -317,6 +315,16 @@ header.navbar {
 
 .btn.btn-blue-full {
     background-color: var(--color-background-dark-blue);
+    color: white;
+}
+
+.btn.btn-red {
+    background-color: inherit;
+    border: solid 1px var(--color-interactive-red-fail);
+    color: var(--color-interactive-red-fail);
+}
+.btn.btn-red:hover {
+    background-color: var(--color-interactive-red-fail);
     color: white;
 }
 
