fixed the designer stuff and started doing administrator things, the report page is done for the normal user, need to do one for the administrator

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -2,6 +2,7 @@
 @import "./progress_bar.css";
 @import "./checkout.css";
 @import "./user.css";
+@import "./report.css";
 html {
     height: 100%;
     margin: 0;
@@ -298,6 +299,7 @@ header.navbar {
     background-color: var(--color-interactive-orange);
     color: white;
 }
+
 .btn.btn-orange:hover {
     background-color: var(--color-interactive-orange2);
     color: white;
@@ -308,6 +310,7 @@ header.navbar {
     border: solid 1px var(--color-background-dark-blue);
     color: var(--color-background-dark-blue);
 }
+
 .btn.btn-blue:hover {
     background-color: var(--color-background-dark-blue);
     color: white;
@@ -323,15 +326,18 @@ header.navbar {
     border: solid 1px var(--color-interactive-red-fail);
     color: var(--color-interactive-red-fail);
 }
+
 .btn.btn-red:hover {
     background-color: var(--color-interactive-red-fail);
     color: white;
 }
+
 .btn.btn-green {
     background-color: inherit;
     border: solid 1px var(--color-interactive-green-success);
     color: var(--color-interactive-green-success);
 }
+
 .btn.btn-green:hover {
     background-color: var(--color-interactive-green-success);
     color: white;
@@ -515,6 +521,7 @@ li.section.visited.current.status-bar-circle:before {
 li.section.status-bar-circle:before {
     z-index: 0;
 }
-#userNavbar .userNavbarItem{
+
+#userNavbar .userNavbarItem {
     padding: 0;
 }
