--- a/template-piu/html/src/styles/user.css
+++ b/template-piu/html/src/styles/user.css
@@ -19,3 +19,12 @@
 .badge.marginBadge {
     margin-left: 10px;
 }
+
+@media only screen and (max-width: 768px) {
+    #userNavbar .btnMediaSmall {
+        padding: .25rem .5rem;
+        font-size: .875rem;
+        line-height: 1.5;
+        border-radius: .2rem;
+    }
+}
