Requests, Policies and Controller functions done, js done, missing testing

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -617,3 +617,7 @@ li.section.status-bar-circle:before {
 .noHover {
     pointer-events: none !important;
 }
+
+.nobr {
+    white-space: nowrap;
+}
