--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -3,3 +3,9 @@
     .checkout1 .status-bar-circle:first-of-type {
         margin-left: 18em;
     }
+
+    #checkout-tab-2, #checkout-tab-3, #checkout-success, #checkout-fail{
+        display: none;
+    }
+
+
