checkout just needs some tweaks on user validation side and fixing the progress bar and it is done

--- a/previous_iterations/template-piu/html/src/styles/common.css
+++ b/previous_iterations/template-piu/html/src/styles/common.css
@@ -125,10 +125,16 @@ header.navbar {
     color: var(--color-primary-black);
 }
 
-#checkoutStatusButton {
+#checkoutStatusButtonSuccess {
     background-color: var(--color-interactive-green-success);
     border-color: transparent;
 }
+
+#checkoutStatusButtonFailure {
+    background-color: var(--color-interactive-red-fail);
+    border-color: transparent;
+}
+
 
 #sidebar .showAllProductListSideBar {
     margin: 0;
