--- a/public/css/montserrat.css
+++ b/public/css/montserrat.css
@@ -8,6 +8,6 @@
     url('public/fonts/montserrat/Montserrat-Regular.ttf') format('embedded-opentype'); /* Legacy iOS */
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, span, p {
     font-family: 'Montserrat', serif;
 }
