--- a/public/css/common.css
+++ b/public/css/common.css
@@ -17,6 +17,7 @@ html body {
     height: 100%;
     margin: 0;
     padding: 0;
+    line-height: 1.4;
 }
 
 #wrapper {
@@ -59,10 +60,10 @@ footer {
     background-color: var(--color-background-white);
 }
 
-.card-footer{
-    position:absolute;
-    bottom:0;
-    width:100%;
+.card-footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 header.navbar {
